name:          e1338
version:       0.1.0.0
synopsis:      A re-write of e1337 with BearRiver (and, maybe, MVars)
description:   Please see the README on GitHub at <https://github.com/madjestic/e1338#readme>
homepage:      https://github.com/madjestic/e1338
license:       BSD3
license-file:  LICENSE
author:        madjestic
maintainer:    madjestic13@gmail.com
copyright:     Vladimir Lopatin
category:      Game
build-type:    Simple
cabal-version: >=2.0

extra-source-files:
                ChangeLog.md
                README.md

source-repository head
  type:         git
  location:     https://github.com/madjestic/e1338

library
  hs-source-dirs:
                src
  build-depends:
                base                ^>= 4.13.0.0
              , aeson               ^>= 1.4.7.1
              , aeson-pretty        ^>= 0.8.8
              , bytestring          ^>= 0.10.8.2
              , containers          ^>= 0.6.0.1
              , GLUtil              ^>= 0.10.3
              , ilist               ^>= 0.2.0.0
              , lens                ^>= 4.19.1
              , linear              ^>= 1.20.8
              , OpenGL              ^>= 3.0.2.2
              , sdl2                ^>= 2.5.1.0
              , store               ^>= 0.7.4
              , text                ^>= 1.2.2.2
              , bearriver           ^>= 0.13.1.2
              --, Yampa               ^>= 0.13.1
              , simple-affine-space ^>= 0.1.1

  exposed-modules:
                AppInput
              , Camera
              , Controllable
              , Descriptor
              , Game
              , Keyboard
              , Material
              , Model
              , Object
              , PGeo
              , Project
              , Project.Parser
              , Rendering
              , Solvable
              , Texture
              , Utils
              , VGeo
  other-modules:
                Paths_e1338
              , LoadShaders
              , FromVector
              , Mouse
  default-language:
                Haskell2010
                                                                           
executable e1338
  main-is:      Main.hs
  hs-source-dirs:
                app
              , src
  ghc-options:         -threaded -O2
  --cpp-options:         -DDEBUG
  build-depends:
                e1338
              , base         ^>= 4.13.0.0
              , aeson        ^>= 1.4.7.1
              , aeson-pretty ^>= 0.8.8
              , bytestring ^>= 0.10.8.2
              , containers ^>= 0.6.0.1
              , GLUtil     ^>= 0.10.3
              , ilist      ^>= 0.2.0.0
              , lens       ^>= 4.19.1
              , linear     ^>= 1.20.8
              , OpenGL     ^>= 3.0.2.2
              , sdl2       ^>= 2.5.1.0
              , store      ^>= 0.7.4
              , text       ^>= 1.2.2.2
              , bearriver           ^>= 0.13.1.2
              -- , Yampa      ^>= 0.13.1
              , simple-affine-space ^>= 0.1.1

  other-modules:
                Paths_e1338
              , Rendering
              , LoadShaders
              , Project
              , Model
              , Texture
              , Project.Parser
              , Object
              , Camera
              , Controllable
              , Descriptor
              , FromVector
              , Game
              , PGeo
              , VGeo
              , AppInput
              , Keyboard
              , Mouse
              , Material
              , Solvable
              , Utils
              
  default-language:
                Haskell2010
